# ccm-diff-testing

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  JenkinsfileCD  README.md  docker-compose.yaml  poetry.toml  pyproject.toml  setup.sh
.github/workflows/: main.yaml
data/GSE16879_download_from_crv:/GSE16879/GPL570/wf-61b0a71c7b/0/: experiment_data.parquet  fdata.parquet  pdata.parquet
data/GSE23597_download_from_crv:/GSE23597_NVFbx/GPL570/wf-07cebdd127/0/: fdata.parquet  pdata.parquet
data/GSE73661_download_from_crv:/GSE73661/GPL6244/wf-93d9de2914/0/: fdata.parquet
data/gene_expression/GSE16879_download_from_crv:/GSE16879/GPL570/wf-61b0a71c7b/0/GSE16879_GPL570_annotate_eset/wf-ede2b58713/0/: experiment_data.parquet  fdata.parquet  pdata.parquet
data/gene_expression/GSE16879_download_from_crv:/GSE16879/GPL570/wf-61b0a71c7b/0/GSE16879_GPL570_collpase_genes/wf-f7c0230e51/0/: experiment_data.parquet  fdata.parquet
data/gene_expression/GSE23597_download_from_crv:/GSE23597_NVFbx/GPL570/wf-07cebdd127/0/: experiment_data.parquet
data/gene_expression/GSE23597_download_from_crv:/GSE23597_NVFbx/GPL570/wf-07cebdd127/0/GSE23597_GPL570_annotate_eset/wf-9195c554d5/0/: experiment_data.parquet  pdata.parquet
data/gene_expression/GSE23597_download_from_crv:/GSE23597_NVFbx/GPL570/wf-07cebdd127/0/GSE23597_GPL570_collpase_genes/wf-85365d6094/0/: experiment_data.parquet  pdata.parquet
data/gene_expression/GSE73661_download_from_crv:/GSE73661/GPL6244/wf-93d9de2914/0/: experiment_data.parquet  pdata.parquet
data/gene_expression/GSE73661_download_from_crv:/GSE73661/GPL6244/wf-93d9de2914/0/GSE73661_GPL6244_annotate_eset/wf-8102584b51/0/: experiment_data.parquet  fdata.parquet  pdata.parquet
docs/: conf.py  index.rst  run.rst
src/: __init__.py  main.py
src/diff-tests/: single_group_tests.py
src/diff_tests/: single_group_tests.py
src/sample_pkg/: sample.py
src/sample_pkg/utils/: util.py
src/scripts/: analysis_notebook.ipynb
tests/: conftest.py  test_mocking_pycytocc.py  test_single_group_tests.py  test_something.py
(+3 files in other folders)
